--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ img {
   align-items: center;
   justify-content: space-between;
 }
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
   .nav-list {
     background-color: var(--Black);
     position: absolute;
@@ -112,10 +112,6 @@ img {
 
 .nav-item a {
   padding: .5rem;
-}
-
-.nav-item a:hover {
-  border-bottom: 1px solid ;
 }
 
 .logo {
@@ -203,25 +199,35 @@ img {
 
 .creations-items {
   position: relative;
+  transition: all ease-in-out .5s;
 }
 
-.creation-link {
+.creations-items:hover {
+  transform: scale(1.1);
+}
+  
+
+.creation-cover {
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
+  padding: 1rem;
   transition: all ease .5s;
-
+  
   display: flex;
   align-items: flex-end;
-  padding: 1rem;
+  cursor: pointer;
+  
+  transition: all ease 1s;
 }
 
-.creation-link:hover {
-  background-color: rgba(0,0,0,0.5);
+.creation-cover:hover{
+  background: linear-gradient(20deg, rgba(255, 255, 255, 0.767) 5%, transparent 100%);
+
 }
 
-.creation-link h3{
+.creation-cover h3{
   color: var(--White);
   font-size: 1.7rem;
   max-width: 150px;
@@ -305,7 +311,6 @@ img {
   .bg-hero {
     background: url(../images/desktop/image-hero.jpg)  no-repeat center; 
     background-size: cover;
-    height: 80vh;
   }
 
   .grid-creations {
@@ -336,6 +341,10 @@ img {
   .footer-list {
     flex-direction: row;
     margin: 0;
+  }
+
+  .sociais-list {
+    justify-content: flex-end;
   }
 }
 
