--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ img {
   background: url(../images/mobile/image-hero.jpg) no-repeat center;
   background-size: cover;
   height: 100vh;
+  max-height: 660px;
 
   display: flex;
   align-items: center;
